# ChangeLog for dev-python/pywhois
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Apr 2011; Justin Lecher <jlec@gentoo.org> pywhois-0.1-r13.ebuild:
  Fix for python ABI stuff

  24 Apr 2010; Johann Schmitz <johann@j-schmitz> +pywhois-0.1-r13.ebuild:
  Initial commit.