@@ -1,1 +1,1 @@
-DIST pywhois-0.1-r13.tar.bz2 17768 SHA256 b9a903fcb43200ea7f4aea5dddbd3403fab5f51c5948172e406c32758880ec71
+DIST pywhois-0.1-r13.tar.bz2 17768 SHA256 b9a903fcb43200ea7f4aea5dddbd3403fab5f51c5948172e406c32758880ec71 SHA512 fb5300e30487a0b7ab78227c47827e39ddf27626a0bc0499e9868f62192143262048ccdb2eabacee583d1cbd4212b419d3600c946e3935bb8274b87d396f77b1 WHIRLPOOL 4063c9db74a2036c95f6a20df06c674f65b609197f309cd86c02a402bfde897a7a482bb1735b6530849925605d18a336479fac3b8af83df82831aae428d7b1a2
