@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/pywhois
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  11 Jun 2013; Justin Lecher <jlec@gentoo.org> pywhois-0.1-r13.ebuild,
+  metadata.xml:
+  Bump to EAPI=5 and new python r1 eclasses
 
   13 Apr 2011; Justin Lecher <jlec@gentoo.org> pywhois-0.1-r13.ebuild:
   Fix for python ABI stuff
